--- a/package.json
+++ b/package.json
@@ -1,31 +1,28 @@
 {
-  "name": "helloworld",
-  "displayName": "HelloCordova",
-  "version": "1.0.0",
-  "description": "A sample Apache Cordova application that responds to the deviceready event.",
+  "name": "events.notify.push",
+  "displayName": "Notify.Events",
+  "version": "0.1.0",
+  "description": "Get notifications from different sources to your device.",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [
-    "ecosystem:cordova"
+    "notification",
+    "alert"
   ],
-  "author": "Apache Cordova Team",
-  "license": "Apache-2.0",
+  "author": "Notify.Events Team",
+  "license": "MIN",
   "dependencies": {
-    "cordova": "9.0.0",
-    "cordova-android": "^8.1.0",
-    "cordova-plugin-advanced-http": "^3.0.0",
-    "cordova-plugin-androidx": "^2.0.0",
-    "cordova-plugin-androidx-adapter": "^1.1.1",
-    "cordova-plugin-badge": "^0.8.8",
-    "cordova-plugin-device": "^2.0.3",
-    "cordova-plugin-dialogs": "^2.0.2",
-    "cordova-plugin-enable-multidex": "^0.2.0",
-    "cordova-plugin-fcm-with-dependecy-updated": "^7.0.9",
-    "cordova-plugin-file": "^6.0.2",
-    "cordova-plugin-globalization": "^1.11.0",
-    "cordova-plugin-local-notification": "^0.9.0-beta.2"
+    "cordova-android": "9.0.0",
+    "cordova-plugin-advanced-http": "3.0.0",
+    "cordova-plugin-androidx": "2.0.0",
+    "cordova-plugin-androidx-adapter": "1.1.1",
+    "cordova-plugin-badge": "0.8.8",
+    "cordova-plugin-device": "2.0.3",
+    "cordova-plugin-dialogs": "2.0.2",
+    "cordova-plugin-enable-multidex": "0.2.0",
+    "cordova-plugin-fcm-with-dependecy-updated": "7.0.9",
+    "cordova-plugin-file": "6.0.2",
+    "cordova-plugin-globalization": "1.11.0",
+    "cordova-plugin-local-notification": "0.9.0-beta.2"
   },
   "devDependencies": {
     "cordova-plugin-whitelist": "^1.3.4"
@@ -33,21 +30,23 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-androidx": {},
+      "cordova-plugin-androidx-adapter": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-dialogs": {},
+      "cordova-plugin-enable-multidex": {},
       "cordova-plugin-fcm-with-dependecy-updated": {
         "ANDROID_FCM_VERSION": "19.0.0",
         "ANDROID_GRADLE_TOOLS_VERSION": "3.5.3",
         "ANDROID_GOOGLE_SERVICES_VERSION": "4.3.3",
         "ANDROID_DEFAULT_NOTIFICATION_ICON": "@mipmap/ic_launcher"
       },
-      "cordova-plugin-device": {},
-      "cordova-plugin-dialogs": {},
       "cordova-plugin-globalization": {},
-      "cordova-plugin-advanced-http": {},
-      "cordova-plugin-enable-multidex": {},
-      "cordova-plugin-local-notification": {},
-      "cordova-plugin-androidx": {},
-      "cordova-plugin-androidx-adapter": {}
+      "cordova-plugin-local-notification": {}
     },
-    "platforms": []
+    "platforms": [
+      "android"
+    ]
   }
 }
