--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "events.notify.push",
   "displayName": "Notify.Events",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "Get notifications from different sources to your device.",
   "main": "index.js",
   "keywords": [
@@ -9,44 +9,39 @@
     "alert"
   ],
   "author": "Notify.Events Team",
-  "license": "MIN",
-  "dependencies": {
-    "cordova-android": "9.0.0",
-    "cordova-plugin-advanced-http": "3.0.0",
-    "cordova-plugin-androidx": "2.0.0",
-    "cordova-plugin-androidx-adapter": "1.1.1",
-    "cordova-plugin-badge": "0.8.8",
-    "cordova-plugin-device": "2.0.3",
-    "cordova-plugin-dialogs": "2.0.2",
-    "cordova-plugin-enable-multidex": "0.2.0",
-    "cordova-plugin-fcm-with-dependecy-updated": "7.0.9",
-    "cordova-plugin-file": "6.0.2",
-    "cordova-plugin-globalization": "1.11.0",
-    "cordova-plugin-local-notification": "0.9.0-beta.2"
-  },
+  "license": "MIT",
   "devDependencies": {
-    "cordova-plugin-whitelist": "^1.3.4"
+    "@parrino/cordova-plugin-local-notifications": "^1.0.2",
+    "cordova-android": "^12.0.1",
+    "cordova-plugin-advanced-http": "^3.3.1",
+    "cordova-plugin-androidx-adapter": "^1.1.3",
+    "cordova-plugin-badge": "^0.8.9",
+    "cordova-plugin-device": "^2.1.0",
+    "cordova-plugin-dialogs": "^2.0.2",
+    "cordova-plugin-fcm-with-dependecy-updated": "github:marutifh/cordova-plugin-fcm-with-dependecy-updated",
+    "cordova-plugin-file": "^8.0.1",
+    "cordova-plugin-local-notifications": "^1.0.0"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-advanced-http": {},
-      "cordova-plugin-androidx": {},
+      "cordova-plugin-advanced-http": {
+        "ANDROIDBLACKLISTSECURESOCKETPROTOCOLS": "SSLv3,TLSv1"
+      },
       "cordova-plugin-androidx-adapter": {},
+      "cordova-plugin-badge": {},
       "cordova-plugin-device": {},
       "cordova-plugin-dialogs": {},
-      "cordova-plugin-enable-multidex": {},
       "cordova-plugin-fcm-with-dependecy-updated": {
-        "ANDROID_FCM_VERSION": "19.0.0",
-        "ANDROID_GRADLE_TOOLS_VERSION": "3.5.3",
-        "ANDROID_GOOGLE_SERVICES_VERSION": "4.3.3",
-        "ANDROID_DEFAULT_NOTIFICATION_ICON": "@mipmap/ic_launcher"
+        "ANDROID_DEFAULT_NOTIFICATION_ICON": "@mipmap/ic_launcher",
+        "ANDROID_FCM_VERSION": "23.0.0",
+        "ANDROID_FIREBASE_BOM_VERSION": "29.0.1",
+        "ANDROID_GOOGLE_SERVICES_VERSION": "4.3.4",
+        "ANDROID_GRADLE_TOOLS_VERSION": "4.1.0",
+        "IOS_FIREBASE_MESSAGING_VERSION": "~> 7.4.0"
       },
-      "cordova-plugin-globalization": {},
-      "cordova-plugin-local-notification": {}
+      "de.appplant.cordova.plugin.local-notification": {},
+      "@parrino/cordova-plugin-local-notifications": {}
     },
-    "platforms": [
-      "android"
-    ]
+    "platforms": []
   }
 }
